# backend/src/modules/users/dto/delete-user.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsEmail } from "class-validator";
+
+export class DeleteUserDto {
+  @ApiProperty()
+  @IsEmail()
+  email!: string;
+}
